# nesa_bot

./: .gitignore  Cargo.toml  README.md
examples/: date-calculations.rs  parse-xml.rs  send-embed.rs  send-message.rs
src/: main.rs
