[package]
name = "nesa_discord_bot"
version = "0.1.0"
authors = ["32byte <xlebedenko@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json", "cookies"] }
tokio = { version = "1", features = ["full"] }
soup = "0.5.0"
minidom = "0.13.0"
chrono = "0.4.19"